@@ -3,6 +3,8 @@ WebHelpers ChangeLog
 
 tip (development version)
 -------------------------
+* webhelpers.pylonslib:
+  - Fix HTML overescaping.  Patch by Marius Gedminas.
 
 
 1.0b1 (2009-11-20)
